# CineVault

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.example.json  nginx.example.conf
database/: DBManager.cpp  DBManager.h  MovieRepository.cpp  MovieRepository.h  ProgressRepository.cpp  ProgressRepository.h  SubtitleRepository.cpp  SubtitleRepository.h
docs/: api.md  architecture.md  playback.md  roadmap.md  ui-principles.md
media_core/: CompatibilityChecker.cpp  CompatibilityChecker.h  FFmpegRunner.cpp  FFmpegRunner.h  HlsGenerator.cpp  HlsGenerator.h  MediaProbe.cpp  MediaProbe.h
playback/: DirectPlayService.cpp  DirectPlayService.h  ProgressTracker.cpp  ProgressTracker.h  RangeRequestHandler.cpp  RangeRequestHandler.h  StreamService.cpp  StreamService.h
scripts/: init_db.sql  run_server.sh  scan_library.sh
server/: main.cpp
server/controllers/: HealthController.cpp  HealthController.h  LibraryController.cpp  LibraryController.h  MovieController.cpp  MovieController.h  PlaybackController.cpp  PlaybackController.h  SubtitleController.cpp  SubtitleController.h
server/models/: MediaStreamInfo.h  MovieInfo.h  PlaybackProgress.h  SubtitleInfo.h
server/services/: LibraryService.cpp  LibraryService.h  MovieService.cpp  MovieService.h  PlaybackService.cpp  PlaybackService.h  ProgressService.cpp  ProgressService.h  SubtitleService.cpp  SubtitleService.h
subtitle/: EncodingDetector.cpp  EncodingDetector.h  SubtitleConverter.cpp  SubtitleConverter.h  SubtitleMatcher.cpp  SubtitleMatcher.h  SubtitleParser.cpp  SubtitleParser.h
web/: index.html  package.json
(+9 files in other folders)
